Open Vehicle Monitor System v3 - Change log

????-??-?? ???  ???????  OTA release
- Cellular: added option to restrict the modem network type to 2G/3G/4G. Restricting
    the network type may help in case of frequent network losses / reconnects.
  New config:
    [modem] net.type (string)           -- auto/2G/3G/4G, default/empty=auto
- smart EQ:
    Hardened poll reply & CAN parsing (REQUIRE_LEN / DLC guards, corrected switch fallthrough).
    Automatic 12V ADC factor recalculation using CAN 12V voltage.
    New config:
    [xsq] calc.adcfactor (bool)             -- activate sutomatic ADC factor recalculation (default false)
- Cellular: GPS auto pause on parking reactivate when Car awakes. This reduces time to first GPS fix.
  New config:    
    [modem] gps.parkreactawake (bool)   -- GPS is switched on for the gps.parkreactlock (minutes) time when the GPS parking pause is active and the car wakes up (default: no)
- server V3 (changes):
    Chunked metric transmission to limit burst size:
      TransmitAllMetrics(): up to 100 metrics per tick, continues next call.
      TransmitModifiedMetrics(): up to 150 modified metrics per tick.
    Priority path for GPS/time metrics with optional extras:
      Default priority: v.p.latitude, v.p.longitude, v.p.altitude, v.p.speed, v.p.gpsspeed, m.time.utc
    New update Command:
      server v3 update priority                   -- send prioritized metrics
- Webserver: Server V3 (MQTT) config page
    Added priority sending controls:
      [server.v3] updatetime.priority (bool)      -- prioritize selected metrics while the vehicle is awake, update in car on interval
      [server.v3] updatetime.immediately (bool)   -- metrics should be sent immediately when they change
      [server.v3] metrics.priority (string)       -- comma separated metric names; supports * and prefix* wildcards
      [server.v3] metrics.include (string)        -- comma separated metric names; supports * and prefix* wildcards